// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeatureRow /> matches expected output 1`] = `
.c1 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  margin-left: 0px;
  padding-bottom: 20px;
  padding-top: 20px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 0px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 10px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
  padding-left: 0px;
  padding-top: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c18 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #22b24e;
  font-size: 16px;
}

.c13 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #FFF;
  font-size: 16px;
}

.c16 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #1566ad;
  font-size: 16px;
}

.c20 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: 100%;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c20:disabled {
  cursor: not-allowed;
}

.c20:hover,
.c20:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c6 {
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  overflow: hidden;
}

.c8 {
  min-width: 1px;
}

.c14 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  min-height: 240px;
}

.c5 {
  display: block;
  overflow: hidden;
}

.c11 {
  background: #2d9dd6;
  margin-top: 0;
}

.c11 p {
  padding: 2px 0 0;
  line-height: 1.5;
}

.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  width: 350px;
}

@media screen and (min-width:32em) {
  .c4 {
    width: 100%;
  }
}

@media screen and (min-width:46em) {
  .c4 {
    width: 80%;
  }
}

@media screen and (min-width:32em) {
  .c10 {
    margin-left: 0px;
  }
}

@media screen and (min-width:46em) {
  .c10 {
    margin-left: -30px;
  }
}

@media screen and (min-width:32em) {
  .c12 {
    padding-left: 0px;
  }
}

@media screen and (min-width:46em) {
  .c12 {
    padding-left: 25%;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:46em) {
  .c3 {
    -webkit-flex-direction: initial;
    -ms-flex-direction: initial;
    flex-direction: initial;
  }
}

@media screen and (min-width:32em) {
  .c15 {
    padding-left: 0px;
  }
}

@media screen and (min-width:46em) {
  .c15 {
    padding-left: 25%;
  }
}

@media (min-width:32em) {
  .c17 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c17 {
    font-size: 20px;
  }
}

@media (min-width:76em) {
  .c17 {
    font-size: 20px;
  }
}

@media (min-width:32em) {
  .c18 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c18 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c18 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c13 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c13 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c13 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c16 {
    font-size: 16px;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
        width="1,1,80%"
      >
        <div
          class="c5"
        >
          <div
            class="c6 c1"
          >
            <div
              class="c7 c1"
            >
              <img
                alt=""
                class="c8"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c9 c10"
      >
        <div
          class="c11 c12"
        >
          <p
            class="c13 c1"
          >
            This is a header
          </p>
        </div>
        <div
          class="c14 c15"
        >
          <p
            class="c16 c1"
          >
            SAVE BIG
          </p>
          <h6
            class="c17 c1"
          >
            Up to 30% off + eGift Card
          </h6>
          <p
            class="c18 c19"
          >
            Here's the body
          </p>
          <a
            class="c20"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeatureTile /> matches expected output 1`] = `
.c3 {
  box-sizing: border-box;
  width: 100%;
}

.c7 {
  box-sizing: border-box;
  background: #FFF;
}

.c8 {
  box-sizing: border-box;
}

.c11 {
  box-sizing: border-box;
  padding-top: 4px;
}

.c19 {
  box-sizing: border-box;
  color: secondary;
}

.c21 {
  box-sizing: border-box;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.c22 {
  box-sizing: border-box;
  padding: 10px;
}

.c25 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c6 {
  border-radius: 4px;
  box-shadow: 0 0 1px rgba(67,90,111,0.3),0 8px 10px -4px rgba(67,90,111,0.47);
}

.c5 {
  border-radius: 4px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: center;
  color: #FFF;
  font-size: 16px;
}

.c20 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c23 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c24 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #22b24e;
  font-size: 16px;
}

.c26 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: 100%;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c26:disabled {
  cursor: not-allowed;
}

.c26:hover,
.c26:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c14 {
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  overflow: hidden;
}

.c16 {
  min-width: 1px;
}

.c18 {
  background: #2d9dd6;
  position: relative;
  width: 80%;
  margin-top: -10px;
}

.c18 p {
  color: #FFF;
  font-size: 14px;
}

.c12 {
  position: relative;
}

.c2 {
  display: block;
  margin: 10px 4px;
}

.c0 > * {
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  -webkit-flex: 0 0 24%;
  -ms-flex: 0 0 24%;
  flex: 0 0 24%;
}

.c0 > *:hover {
  -webkit-transform: translateY(-10px);
  -ms-transform: translateY(-10px);
  transform: translateY(-10px);
}

.c13 {
  display: block;
  overflow: hidden;
  max-height: 160px;
}

.c9 {
  background: #2d9dd6;
}

.c9 p {
  line-height: 1.5;
}

.c17 {
  min-width: 200px;
  width: 80%;
  display: block;
  position: relative;
}

.c17 p {
  display: block;
}

.c4 {
  max-width: 316px;
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (min-width:32em) {
  .c3 {
    width: 100%;
  }
}

@media screen and (min-width:46em) {
  .c3 {
    width: 33.33333333333333%;
  }
}

@media screen and (min-width:32em) {
  .c25 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:32em) {
  .c1 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:46em) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media screen and (min-width:76em) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:32em) {
  .c10 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c10 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c10 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c20 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c20 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c20 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c23 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c23 {
    font-size: 20px;
  }
}

@media (min-width:76em) {
  .c23 {
    font-size: 20px;
  }
}

@media (min-width:32em) {
  .c24 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c24 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c24 {
    font-size: 16px;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
      width="1,1,0.3333333333333333"
    >
      <div
        class="c4 c5 c6 c7"
        elevation="2"
      >
        <div
          class="c8"
        >
          <div
            class="c9 c8"
          >
            <p
              class="c10 c11"
            >
              This is a header
            </p>
          </div>
          <div
            class="c12 c8"
          >
            <div
              class="c13"
            >
              <div
                class="c14 c8"
              >
                <div
                  class="c15 c8"
                >
                  <img
                    alt=""
                    class="c16"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="c17 c18 c19"
              color="secondary"
            >
              <p
                class="c20 c21"
              >
                SAVE BIG
              </p>
            </div>
          </div>
        </div>
        <div
          class="c22"
        >
          <h6
            class="c23 c8"
          >
            Up to 30% off + eGift Card
          </h6>
          <p
            class="c24 c25"
          >
            Here's the body
          </p>
        </div>
        <div
          class="c22"
        >
          <a
            class="c26"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
    <div
      class="c2 c3"
      width="1,1,0.3333333333333333"
    >
      <div
        class="c4 c5 c6 c7"
        elevation="2"
      >
        <div
          class="c8"
        >
          <div
            class="c9 c8"
          >
            <p
              class="c10 c11"
            >
              This is a header
            </p>
          </div>
          <div
            class="c12 c8"
          >
            <div
              class="c13"
            >
              <div
                class="c14 c8"
              >
                <div
                  class="c15 c8"
                >
                  <img
                    alt=""
                    class="c16"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="c17 c18 c19"
              color="secondary"
            >
              <p
                class="c20 c21"
              >
                SPECIAL OFFER
              </p>
            </div>
          </div>
        </div>
        <div
          class="c22"
        >
          <h6
            class="c23 c8"
          >
            Save up to $400 a year!
          </h6>
          <p
            class="c24 c25"
          >
            Worried about your caravan getting trashed? Well, we can’t help you, get a real house and we’ll talk...
          </p>
        </div>
        <div
          class="c22"
        >
          <a
            class="c26"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
    <div
      class="c2 c3"
      width="1,1,0.3333333333333333"
    >
      <div
        class="c4 c5 c6 c7"
        elevation="2"
      >
        <div
          class="c8"
        >
          <div
            class="c9 c8"
          >
            <p
              class="c10 c11"
            >
              This is some content
            </p>
          </div>
          <div
            class="c12 c8"
          >
            <div
              class="c13"
            >
              <div
                class="c14 c8"
              >
                <div
                  class="c15 c8"
                >
                  <img
                    alt=""
                    class="c16"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/53/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="c17 c18 c19"
              color="secondary"
            >
              <p
                class="c20 c21"
              >
                GET A QUOTE
              </p>
            </div>
          </div>
        </div>
        <div
          class="c22"
        >
          <h6
            class="c23 c8"
          >
            Save up to $400 a year!
          </h6>
          <p
            class="c24 c25"
          >
            Life is too short to not have a pet duck. My ducks name is Szechuan.
          </p>
        </div>
        <div
          class="c22"
        >
          <a
            class="c26"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeatureTile /> matches expected output 2`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH sc-eNQAEJ kGojBQ sc-EHOje bMYgfz"
  >
    <div
      class="sc-bdVaJa sc-jKJlTe eOTEmf sc-htpNat bnpFCb"
      width="1,1,0.3333333333333333"
    >
      <div
        class="sc-bdVaJa sc-hSdWYo eNSeyC sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
        elevation="2"
      >
        <div
          class="sc-bdVaJa sc-htpNat eXbiIh"
        >
          <div
            class="sc-bdVaJa sc-kkGfuU jeyXze sc-htpNat eXbiIh"
          >
            <p
              class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
            >
              This is a header
            </p>
          </div>
          <div
            class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
          >
            <div
              class="sc-kEYyzF gilnmH"
            >
              <div
                class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
              >
                <div
                  class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
                >
                  <img
                    alt=""
                    class="sc-fjdhpX bLYCUj"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-bdVaJa sc-iAyFgw gRUbSX sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
              color="secondary"
            >
              <p
                class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
              >
                SAVE BIG
              </p>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <h6
            class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
          >
            Up to 30% off + eGift Card
          </h6>
          <p
            class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
          >
            Here's the body
          </p>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <a
            class="sc-htoDjs jQrbTb"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-jKJlTe eOTEmf sc-htpNat bnpFCb"
      width="1,1,0.3333333333333333"
    >
      <div
        class="sc-bdVaJa sc-hSdWYo eNSeyC sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
        elevation="2"
      >
        <div
          class="sc-bdVaJa sc-htpNat eXbiIh"
        >
          <div
            class="sc-bdVaJa sc-kkGfuU jeyXze sc-htpNat eXbiIh"
          >
            <p
              class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
            >
              This is a header
            </p>
          </div>
          <div
            class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
          >
            <div
              class="sc-kEYyzF gilnmH"
            >
              <div
                class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
              >
                <div
                  class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
                >
                  <img
                    alt=""
                    class="sc-fjdhpX bLYCUj"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-bdVaJa sc-iAyFgw gRUbSX sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
              color="secondary"
            >
              <p
                class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
              >
                SPECIAL OFFER
              </p>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <h6
            class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
          >
            Save up to $400 a year!
          </h6>
          <p
            class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
          >
            Worried about your caravan getting trashed? Well, we can’t help you, get a real house and we’ll talk...
          </p>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <a
            class="sc-htoDjs jQrbTb"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-jKJlTe eOTEmf sc-htpNat bnpFCb"
      width="1,1,0.3333333333333333"
    >
      <div
        class="sc-bdVaJa sc-hSdWYo eNSeyC sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
        elevation="2"
      >
        <div
          class="sc-bdVaJa sc-htpNat eXbiIh"
        >
          <div
            class="sc-bdVaJa sc-kkGfuU jeyXze sc-htpNat eXbiIh"
          >
            <p
              class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
            >
              This is some content
            </p>
          </div>
          <div
            class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
          >
            <div
              class="sc-kEYyzF gilnmH"
            >
              <div
                class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
              >
                <div
                  class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
                >
                  <img
                    alt=""
                    class="sc-fjdhpX bLYCUj"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/53/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-bdVaJa sc-iAyFgw gRUbSX sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
              color="secondary"
            >
              <p
                class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
              >
                GET A QUOTE
              </p>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <h6
            class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
          >
            Save up to $400 a year!
          </h6>
          <p
            class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
          >
            Life is too short to not have a pet duck. My ducks name is Szechuan.
          </p>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <a
            class="sc-htoDjs jQrbTb"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeatureTile /> matches expected output 3`] = `
<div>
  <div
    class="sc-bdVaJa sc-bwzfXH sc-eNQAEJ kGojBQ sc-EHOje bMYgfz"
  >
    <div
      class="sc-bdVaJa sc-jKJlTe eOTEmf sc-htpNat bnpFCb"
      width="1,1,0.3333333333333333"
    >
      <div
        class="sc-bdVaJa sc-hSdWYo eNSeyC sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
        elevation="2"
      >
        <div
          class="sc-bdVaJa sc-htpNat eXbiIh"
        >
          <div
            class="sc-bdVaJa sc-kkGfuU jeyXze sc-htpNat eXbiIh"
          >
            <p
              class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
            >
              This is a header
            </p>
          </div>
          <div
            class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
          >
            <div
              class="sc-kEYyzF gilnmH"
            >
              <div
                class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
              >
                <div
                  class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
                >
                  <img
                    alt=""
                    class="sc-fjdhpX bLYCUj"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-bdVaJa sc-iAyFgw gRUbSX sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
              color="secondary"
            >
              <p
                class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
              >
                SAVE BIG
              </p>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <h6
            class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
          >
            Up to 30% off + eGift Card
          </h6>
          <p
            class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
          >
            Here's the body
          </p>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <a
            class="sc-htoDjs jQrbTb"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-jKJlTe eOTEmf sc-htpNat bnpFCb"
      width="1,1,0.3333333333333333"
    >
      <div
        class="sc-bdVaJa sc-hSdWYo eNSeyC sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
        elevation="2"
      >
        <div
          class="sc-bdVaJa sc-htpNat eXbiIh"
        >
          <div
            class="sc-bdVaJa sc-kkGfuU jeyXze sc-htpNat eXbiIh"
          >
            <p
              class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
            >
              This is a header
            </p>
          </div>
          <div
            class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
          >
            <div
              class="sc-kEYyzF gilnmH"
            >
              <div
                class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
              >
                <div
                  class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
                >
                  <img
                    alt=""
                    class="sc-fjdhpX bLYCUj"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-bdVaJa sc-iAyFgw gRUbSX sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
              color="secondary"
            >
              <p
                class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
              >
                SPECIAL OFFER
              </p>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <h6
            class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
          >
            Save up to $400 a year!
          </h6>
          <p
            class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
          >
            Worried about your caravan getting trashed? Well, we can’t help you, get a real house and we’ll talk...
          </p>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <a
            class="sc-htoDjs jQrbTb"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-jKJlTe eOTEmf sc-htpNat bnpFCb"
      width="1,1,0.3333333333333333"
    >
      <div
        class="sc-bdVaJa sc-hSdWYo eNSeyC sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
        elevation="2"
      >
        <div
          class="sc-bdVaJa sc-htpNat eXbiIh"
        >
          <div
            class="sc-bdVaJa sc-kkGfuU jeyXze sc-htpNat eXbiIh"
          >
            <p
              class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
            >
              This is some content
            </p>
          </div>
          <div
            class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
          >
            <div
              class="sc-kEYyzF gilnmH"
            >
              <div
                class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
              >
                <div
                  class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
                >
                  <img
                    alt=""
                    class="sc-fjdhpX bLYCUj"
                    src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/53/homepage_tile/original.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-bdVaJa sc-iAyFgw gRUbSX sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
              color="secondary"
            >
              <p
                class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
              >
                GET A QUOTE
              </p>
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <h6
            class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
          >
            Save up to $400 a year!
          </h6>
          <p
            class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
          >
            Life is too short to not have a pet duck. My ducks name is Szechuan.
          </p>
        </div>
        <div
          class="sc-bdVaJa sc-htpNat SxJjp"
        >
          <a
            class="sc-htoDjs jQrbTb"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
